# cpp_template

./: CMakeLists.txt  README.md
include/: MyClass.hpp
src/: MyClass.cpp  main.cpp
